fix:리드미 폴더 정리

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <button onclick="addCircle(canvas)">AddCircle</button>
     <button onclick="makeGroup(canvas,group)">MakeGroup</button>
     <button onclick="unGroup(canvas,group)">UnGroup</button>
-    <script src="jscolor.js"></script>
-    <script src="fabric.min.js"></script>
+    <script src="./lib/jscolor.js"></script>
+    <script src="./lib/fabric.min.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
